# IRIS

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  IRIS_PRD_v5.docx  IRIS_Technical_Architecture_v5.docx  IRIS_v5_ClaudeCode_Prompts.md  Makefile  README.md  docker-compose.yml  pyproject.toml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  store.ts
dashboard/src/api/: client.ts  ws.ts
dashboard/src/components/: AgentLog.tsx  Avatar.tsx  ChatMessage.tsx  Layout.tsx  MicButton.tsx  ToolCallCard.tsx
dashboard/src/pages/: AgentMonitor.tsx  Chat.tsx  Connections.tsx  Cost.tsx  Memory.tsx  Settings.tsx
iris/: __init__.py  __main__.py
iris/agents/: __init__.py  base.py  specialists.yaml
iris/config/: __init__.py  settings.py
iris/connectors/: __init__.py  catalog.py  catalog.yaml  oauth.py  repo.py  service.py  test_oauth.py  test_refresh.py  test_token_vault.py  token_auth.py  token_vault.py
iris/core/: __init__.py  confirm.py  context.py  events.py  orchestrator.py  planner.py  privacy.py  proactive.py  telemetry.py
iris/data/: __init__.py  db.py  models.py  repo.py
iris/gateway/: __init__.py  api.py  connectors_api.py  middleware.py  ws.py
iris/llm/: __init__.py  base.py  gemini.py
iris/mcp/: __init__.py  browser_router.py  host.py  registry.yaml
iris/mcp/servers/: __init__.py  agentmemory_server.py  desktop_server.py
iris/memory/: __init__.py  consolidate.py  mem0_client.py  store.py
iris/router/: __init__.py  model_router.py  test_model_router.py
iris/security/: __init__.py  audit.py  crypto.py  redaction.py  sandbox.py  secrets.py  test_crypto.py  test_privacy.py  test_sandbox.py
iris/tools/: __init__.py  screen.py
iris/voice/: __init__.py  _audio.py  stt.py  tts.py  wake.py
scripts/: audit_connectors.py  audit_privacy.py  audit_tenant_scope.py  quality_gates.py  self_audit.py  smoke_agents.py  smoke_gemini.py  smoke_learn.py  smoke_mcp.py  smoke_memory.py  smoke_tts.py  smoke_ws.py
workspace/: .gitkeep
