[project]
name = "iris"
version = "5.0.0"
description = "I.R.I.S. v5 — stateless, Gemini-routed, MCP-first personal AI assistant"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "IRIS" }]

dependencies = [
    # ── Web / API ──────────────────────────────────────────────
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # ── Settings / validation ─────────────────────────────────
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    # ── LLM (Gemini) ──────────────────────────────────────────
    "google-genai>=0.3",
    # ── HTTP ──────────────────────────────────────────────────
    "httpx>=0.27",
    # ── Data ──────────────────────────────────────────────────
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "redis>=5.2",
    # ── Config / MCP ──────────────────────────────────────────
    "pyyaml>=6.0",
    "mcp>=1.1",
    "mcp-server-fetch>=2025.1.17",  # maintained Python fetch server (websearch)
    "chromadb>=0.5",                # vector DB behind the agentmemory MCP server
    # ── Observability / logging ───────────────────────────────
    "opentelemetry-sdk>=1.28",
    "structlog>=24.4",
    "keyring>=25.0",            # OS keychain for site credentials (security/secrets.py)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]
voice = [
    "numpy>=1.26",
    "sounddevice>=0.5",      # local mic/speaker transport
    "openwakeword>=0.6",     # "Hey IRIS" wake word (Apache-2.0, local, no key)
    "kokoro-onnx>=0.4",      # local Kokoro-82M female voice (af_heart, Apache-2.0)
    "faster-whisper>=1.0",   # default STT (MIT, local, no key)
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["iris*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
